--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Professional project ",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon src/index.js"
   },
   "keywords": [
     "java",
@@ -12,5 +13,11 @@
     "backend"
   ],
   "author": "jay rana",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "touch": "^3.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
